--- a/WebContent/pages/contato.xhtml
+++ b/WebContent/pages/contato.xhtml
@@ -24,7 +24,7 @@
 				</f:facet>
 
 				<p:column headerText="Código" sortBy="#{item.idContato}"
-					styleClass="textContato" width="70">
+					styleClass="textContato" width="50">
 					<h:outputText value="#{item.idContato}" />
 				</p:column>
 
@@ -41,7 +41,7 @@
 					<h:outputText value="#{item.telefone}" />
 				</p:column>
 
-				<p:column headerText="Celular" width="110">
+				<p:column headerText="Celular" width="100">
 					<h:outputText value="#{item.celular}" />
 				</p:column>
 
@@ -50,30 +50,31 @@
 				</p:column>
 
 				<p:column headerText="Profissão" sortBy="#{item.profissao}"
-					filterBy="#{item.profissao}">
+					filterBy="#{item.profissao}" width="100" styleClass="textContato">
 					<h:outputText value="#{item.profissao}" />
 				</p:column>
 
-				<p:column headerText="Empresa">
+				<p:column headerText="Empresa" width="100">
 					<h:outputText value="#{item.empresa}" />
 				</p:column>
 
 				<p:column headerText="Aniversário" styleClass="textContato"
-					width="60">
+					width="100">
 					<h:outputText value="#{item.dataNascimento}" />
 				</p:column>
 
 				<p:column headerText="Cadastro" styleClass="textContato" width="60">
 					<h:outputText value="#{item.dataCadastro}" />
 				</p:column>
-				
-				<p:column headerText="Observação" styleClass="textContato" width="60">
+
+				<p:column headerText="Observação" styleClass="textContato"
+					width="60">
 					<h:outputText value="#{item.observacao}" />
 				</p:column>
 
-				<p:column headerText="Opções" width="60">
+				<p:column headerText="Opções" width="70">
 					<p:commandButton icon="ui-icon-trash"
-						oncomplete="PF('dialogoContatoExcluir').show();"
+						oncomplete="PF('dialogContatoExcluir').show();"
 						update=":formContatoExcluir:panelContatoExcluir">
 
 						<f:setPropertyActionListener target="#{MBContato.contato}"
@@ -81,7 +82,7 @@
 					</p:commandButton>
 
 					<p:commandButton icon="ui-icon-pencil"
-						oncomplete="PF('dialogoContatoEditar').show();"
+						oncomplete="PF('dialogContatoEditar').show();"
 						update=":formContatoEditar:panelContatoEditar">
 
 						<f:setPropertyActionListener value="#{item}"
@@ -98,7 +99,7 @@
 			</p:dataTable>
 		</h:form>
 
-		<!-- Tela novo contato -->
+		<!-- Dialogo Novo -->
 		<p:dialog widgetVar="dialogContatoNovo" closable="false"
 			draggable="false" resizable="false" header="Contato - Novo"
 			modal="true" appendTo="@(body)">
@@ -166,7 +167,8 @@
 			</h:form>
 		</p:dialog>
 
-		<p:dialog widgetVar="dialogoContatoExcluir" closable="false"
+		<!-- Dialogo Excluir -->
+		<p:dialog widgetVar="dialogContatoExcluir" closable="false"
 			draggable="false" resizable="false" modal="true"
 			header="Contato - Excluir" appendTo="@(body)">
 
@@ -182,7 +184,7 @@
 				<h:panelGrid columns="2">
 					<p:commandButton icon="ui-icon-trash" value="Excluir"
 						actionListener="#{MBContato.excluir}"
-						oncomplete="PF('dialogoContatoExcluir').hide(); tabContato.clearFilters(); PF('tabelaContato'.clearFilters();"
+						oncomplete="verificaCampo(xhr, status, args, 'dialogContatoExcluir', 'tabelaContatoListagem')"
 						update=":formContatoListagem:tabelaContato :mensagemGlobal" />
 
 					<p:commandButton icon="ui-icon-close" value="Cancelar"
@@ -191,7 +193,8 @@
 			</h:form>
 		</p:dialog>
 
-		<p:dialog widgetVar="dialogoContatoEditar" closable="false"
+		<!-- Dialogo Editar -->
+		<p:dialog widgetVar="dialogContatoEditar" closable="false"
 			draggable="false" resizable="false" modal="true" appendTo="@(body)"
 			header="Contato - Editar">
 
@@ -246,7 +249,7 @@
 						update=":formContatoListagem:tabelaContato :mensagemGlobal" />
 
 					<p:commandButton icon="ui-icon-close" value="Cancelar"
-						onclick="PF('dialogoContatoEditar').hide();" />
+						onclick="PF('dialogContatoEditar').hide();" />
 				</p:panelGrid>
 			</h:form>
 		</p:dialog>
