Corrigido chamada pagina sobre no template menu principal

--- a/WebContent/pages/sobre.xhtml
+++ b/WebContent/pages/sobre.xhtml
@@ -14,7 +14,7 @@
 	<ui:define name="conteudo">
 		<p:dialog header="Agenda Java 1.0" widgetVar="dialogoSobre"
 			modal="true" height="350" width="600" appendTo="@(body)"
-			draggable="false" resizable="false">
+			draggable="false" resizable="false" visible="true">
 
 			<p:panelGrid columns="2" styleClass="panelEditar">
 				<h:graphicImage value="/images/agenda.png" width="200" height="200"
