Modificado versionamento e texto da página sobre.

--- a/WebContent/pages/sobre.xhtml
+++ b/WebContent/pages/sobre.xhtml
@@ -22,18 +22,20 @@
 
 				<h3>Sobre a Agenda Java</h3>
 
-				<h5>Versão 1.0</h5>
+				<h5>Versão 1.2</h5>
 
-				<p>Lorem Ipsum is simply dummy text of the printing and
-					typesetting industry. Lorem Ipsum has been the industry's standard
-					dummy text ever since the 1500s.</p>
+				<p style="text-align: justify;">O projeto Agenda Java é uma
+					iniciativa privada que visa através de estudos a melhora e ascensão
+					do aprendizado na codificação da linguagem. Onde a ação principal
+					da Agenda se da através do controle de login e um crud básico entre
+					contatos e usuários.</p>
 			</p:panelGrid>
 
 			<p:panelGrid columns="3" styleClass="panelEditarSobre">
 
 				<h:outputText value="Todos os direitos reservados" />
 				<h:outputText value="Direitos do Usuário Final" />
-				<h:outputText value="Política de Privacidade do Usuário" />
+				<h:outputText value="Política de Privacidade do Proprietário" />
 
 			</p:panelGrid>
 		</p:dialog>
