Modificar nomes dos atributos codigo das classes de dominio

--- a/WebContent/pages/contato.xhtml
+++ b/WebContent/pages/contato.xhtml
@@ -23,9 +23,9 @@
 					Contato - Listagem
 				</f:facet>
 
-				<p:column headerText="Código" sortBy="#{item.idContato}"
+				<p:column headerText="Código" sortBy="#{item.codigo}"
 					styleClass="textContato" width="50">
-					<h:outputText value="#{item.idContato}" />
+					<h:outputText value="#{item.codigo}" />
 				</p:column>
 
 				<p:column headerText="Nome" sortBy="#{item.nome}"
