--- a/WebContent/pages/contato.xhtml
+++ b/WebContent/pages/contato.xhtml
@@ -175,7 +175,7 @@
 			<h:form id="formContatoExcluir">
 				<h:panelGrid columns="2" id="panelContatoExcluir">
 					<h:outputLabel value="Código:" />
-					<h:outputText value="#{MBContato.contato.idContato}" />
+					<h:outputText value="#{MBContato.contato.codigo}" />
 
 					<h:outputLabel value="Nome:" />
 					<h:outputText value="#{MBContato.contato.nome}" />
@@ -202,7 +202,7 @@
 				<p:panelGrid columns="2" id="panelContatoEditar"
 					styleClass="panelEditar">
 					<h:outputLabel value="Código:" />
-					<h:outputText value="#{MBContato.contato.idContato}" />
+					<h:outputText value="#{MBContato.contato.codigo}" />
 
 					<h:outputLabel value="Nome:" />
 					<h:inputText maxlength="45" size="30"
