Ignorado método de teste da conexão e modificado versão da página sobre

--- a/WebContent/pages/sobre.xhtml
+++ b/WebContent/pages/sobre.xhtml
@@ -12,7 +12,7 @@
 	</ui:define>
 
 	<ui:define name="conteudo">
-		<p:dialog header="Agenda Java 1.0" widgetVar="dialogoSobre"
+		<p:dialog header="Agenda Java" widgetVar="dialogoSobre"
 			modal="true" height="350" width="600" appendTo="@(body)"
 			draggable="false" resizable="false" visible="true">
 
@@ -22,7 +22,7 @@
 
 				<h3>Sobre a Agenda Java</h3>
 
-				<h5>Versão 1.2</h5>
+				<h5>Versão 1.4</h5>
 
 				<p style="text-align: justify;">O projeto Agenda Java é uma
 					iniciativa privada que visa através de estudos a melhora e ascensão
