Modificado modal de informações do contato
Mostrar inputText disable.

--- a/WebContent/pages/contato.xhtml
+++ b/WebContent/pages/contato.xhtml
@@ -247,34 +247,37 @@
 			<h:form id="formContatoInfo">
 				<h:panelGrid id="panelContatoInfo" columns="2">
 					<h:outputLabel value="Nome:" />
-					<h:outputText value="#{MBContato.contato.nome}" />
+					<h:inputText value="#{MBContato.contato.nome}" disabled="true" />
 
 					<h:outputLabel value="Endereco:" />
-					<h:outputText value="#{MBContato.contato.endereco}" />
+					<h:inputText value="#{MBContato.contato.endereco}" disabled="true" />
 
 					<h:outputLabel value="Telefone:" />
-					<h:outputText value="#{MBContato.contato.telefone}" />
+					<h:inputText value="#{MBContato.contato.telefone}" disabled="true" />
 
 					<h:outputLabel value="Celular:" />
-					<h:outputText value="#{MBContato.contato.celular}" />
+					<h:inputText value="#{MBContato.contato.celular}" disabled="true" />
 
 					<h:outputLabel value="Email:" />
-					<h:outputText value="#{MBContato.contato.email}" />
+					<h:inputText value="#{MBContato.contato.email}" disabled="true" />
 
 					<h:outputLabel value="Profissão:" />
-					<h:outputText value="#{MBContato.contato.profissao}" />
+					<h:inputText value="#{MBContato.contato.profissao}" disabled="true" />
 
 					<h:outputLabel value="Empresa:" />
-					<h:outputText value="#{MBContato.contato.empresa}" />
+					<h:inputText value="#{MBContato.contato.empresa}" disabled="true" />
 
 					<h:outputLabel value="Data Nascimento:" />
-					<h:outputText value="#{MBContato.contato.dataNascimento}" />
+					<h:inputText value="#{MBContato.contato.dataNascimento}"
+						disabled="true" />
 
 					<h:outputLabel value="Data Cadastro" />
-					<h:outputText value="#{MBContato.contato.dataCadastro}" />
+					<h:inputText value="#{MBContato.contato.dataCadastro}"
+						disabled="true" />
 
 					<h:outputLabel value="Observação" />
-					<h:outputText value="#{MBContato.contato.observacao}" />
+					<h:inputTextarea value="#{MBContato.contato.observacao}"
+						disabled="true" />
 
 				</h:panelGrid>
 
