Modificado validação dos campos view contato

--- a/WebContent/pages/contato.xhtml
+++ b/WebContent/pages/contato.xhtml
@@ -102,7 +102,7 @@
 					<h:outputLabel value="Endereco:" />
 					<h:inputText maxlength="45" size="30"
 						class="ui-inputfield ui-inputmask ui-widget ui-state-default ui-corner-all"
-						value="#{MBContato.contato.endereco}" />
+						value="#{MBContato.contato.endereco}" required="true" requiredMessage="O Endereço do contato é obrigatório."/>
 
 					<h:outputLabel value="Telefone:" />
 					<p:inputMask id="telefoneFixo" mask="(99) 9999-9999" maxlength="14"
@@ -111,7 +111,7 @@
 					<h:outputLabel value="Celular:" />
 					<p:inputMask mask="(99) 99999-9999" maxlength="14" size="20"
 						value="#{MBContato.contato.celular}" required="true"
-						requiredMessage="Celular do contato obirgatório!" />
+						requiredMessage="O número do Celular do contato obirgatório!" />
 
 					<h:outputLabel value="Email:" />
 					<h:inputText maxlength="45" size="30"
@@ -130,11 +130,11 @@
 
 					<h:outputLabel value="Data Nascimento:" />
 					<p:inputMask maxlength="10" size="15" mask="99/99/9999"
-						value="#{MBContato.contato.dataNascimento}" />
+						value="#{MBContato.contato.dataNascimento}" required="true" requiredMessage="A data de nascimento do contato é obrigatório."/>
 
 					<h:outputLabel value="Data Cadastro" />
 					<p:inputMask mask="99/99/9999" size="15" maxlength="10"
-						value="#{MBContato.contato.dataCadastro}" />
+						value="#{MBContato.contato.dataCadastro}" required="true" requiredMessage="A data de cadastro do contato é obrigatório."/>
 
 					<h:outputLabel value="Observação" />
 					<p:inputText maxlength="100" size="30"
