--- a/WebContent/pages/usuario.xhtml
+++ b/WebContent/pages/usuario.xhtml
@@ -93,7 +93,7 @@
 						update=":formUsuarioListagem:tabelaUsuario :mensagemGlobal" />
 
 					<p:button value="Cancelar"
-						outcome="/pages/contato.xhtml?faces-redirect=true" />
+						outcome="/pages/usuario.xhtml?faces-redirect=true" />
 				</h:panelGrid>
 			</h:form>
 		</p:dialog>
