--- a/WebContent/pages/relatorioContato.xhtml
+++ b/WebContent/pages/relatorioContato.xhtml
@@ -21,7 +21,7 @@
 
 			<h:panelGrid columns="2" id="panelRelatorioContato">
 				<p:commandButton value="Gerar Relatório" icon="ui-icon-document"
-					action="#{MBContato.gerarRelatorioContato()}" ajax="false"
+					action="#{ContatoBean.gerarRelatorioContato()}" ajax="false"
 					onclick="this.form.target='_blank'" />
 
 				<p:button value="Voltar"
